--- a/src/app/product-page/product-page.component.html
+++ b/src/app/product-page/product-page.component.html
@@ -2,6 +2,9 @@
   <div class="row">
     <app-product-description></app-product-description>
   </div>
-  
-  
+  <div class="row">
+    <div class="col-sm-8">
+      <app-product-tracklisting></app-product-tracklisting>
+    </div>
+  </div>
 </main>
